--- a/index.html
+++ b/index.html
@@ -23,46 +23,107 @@
     </div>
   </nav>
 
-    <!-- HERO -->
-      <img src="goat_clone.png" alt="" width="1550px"
+  <!-- NIKE SHOE -->
 
+  <style>
+    .air-jordan-bg-1 {
+      background: url('goat_clone.png');
+      background-size: cover;
+    }
+  </style>
+
+  <section>
+    <div class="air-jordan-bg-1 ">
+      <div class="p-5 d-flex align-items-end" style="height:500px;">
+        <a href="" class="text-white">
+          <h4>The Featured Collection</h4>
+            <h1>The RUI HACHIMURA EDIT</h1>
+        </a>
+      </div>
+    </div>
+  </section>
+
+    <style>
+      .air-jordan-bg-1-red {
+        background: url('AJ_1_varsity_red.png');
+        background-size: cover;
+      }
+
+    </style>
+
+    <section>
+      <div class="jumbotron jumbotron-fluid bg-dark text-white">
+        <div class="container">
+          <div class="">
+
+        <div>
+        <a class="nav-item nav-link active" href="#"> <span class="sr-only">(current)</span></a>
+        <h1> Just Dropped </h1></div>
+        <div class="d-flex justify-content-end"><button type="button" class="btn btn-outline-dark" class="rounded-0">SEE ALL</button></div></div>
+        </div>
+
+    <article>
+      <img src="yeezy_700.png" alt="" width="1450px">
+    </article>
+
+    <article>
+      <img src="AJ_1_varsity_red.png" alt="" width="1450px">
+    </article>
+
+    <!--GOAT FACTS -->
+    <section>
+      <div class="jumbotron jumbotron-fluid bg-dark text-white">
+        <div class="container">
+          <div class="">
+
+          </div>
+          <div class="d-flex align-content-center flex-wrap">
+          <h1 class="text-center" > GOAT is the global platform for style.</h1>
+          </div>
+
+            <div class="d-flex align-content-center flex-wrap">
+            <p class="text-center">Shop 75,000</p>
+            </div>
+
+            <div class="d-flex align-content-center flex-wrap">
+            <p class="text-center">Sneaker Styles </p>
+            </div>
+
+            <div class="d-flex align-content-center flex-wrap">
+            <h3><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-circle"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg></h3>
+            <p class="text-center">Authencity</p>
+            </div>
+
+            <div class="d-flex align-content-center flex-wrap">
+            <p class="text-center">Assured</p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>
+            </div>
+
+            <div class="d-flex align-content-center flex-wrap">
+            <p class="text-center">Buy and Sell</p>
+            </div>
+
+            <div class="d-flex align-content-center flex-wrap">
+            <p class="text-center">Globally</p>
+            </div>
       </div>
 
-  <div>
+    <article>
+      <img src="greatest.png" alt="" width="1450px">
+    </article>
 
-   <a class="nav-item nav-link active" href="#"> <span class="sr-only">(current)</span></a>
-     <h1> Just Dropped </h1></div>
-     <div class="d-flex justify-content-end"><button type="button" class="btn btn-outline-dark" class="rounded-0">SEE ALL</button></div></div>
-
-
-
-
-  <img src="AJ_1_varsity_red.png" alt="" width="1500px">
-</div> <h1> Air Jordan 1</h1>
+    <article>
+      <img src="app.png" alt="" width="1450px">
+    </article>
 
 
-  <img src="yeezy_700.png" alt="" width="1550px"
-
-
-    <!-- HERO -->
-
-</div>
-
-      <div class bg color: dark class="jumbotron text-center">
-        <div class="p-3 mb-2 bg-dark text-white" class="jumbotron text-center">  <h1> GOAT is the global platform for style.</h1></div>
-
-<img src="greatest.png" alt="" width="1550px">
-<img src="app.png" alt="" width="1550px">
-      </div>
-
-    <!-- CALL TO ACTION -->
-    <SCRIPT></SCRIPT>
-</body>
-<footer>
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
+  <footer>
+    <!-- FEATHER ICONS => usage documentation, add the script, and the .replace(), add the <i data-feather="home"></i> -->
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
-<p class="text-right">© 2020 1661, Inc. All Rights Reserved</p>
-</footer>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
+    <p class="text-right">© 2020 1661, Inc. All Rights Reserved</p>
+  </footer>
 
+</body>
 </html>
